genctl-ci/calico/tekton-worker/agent-controller-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: agent-controller
  namespace: tekton-pipelines
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      selector: k8s-app == 'kube-dns' && projectcalico.org/namespace == 'kube-system'
      namespaceSelector: all()
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 53
      selector: k8s-app == 'kube-dns' && projectcalico.org/namespace == 'kube-system'
      namespaceSelector: all()
    protocol: TCP
  - action: Allow
    destination:
      nets:      
      - 172.20.0.1/32 #Kubernetes service endpoint
  - action: Deny
    destination:
      selector: ibm.role == 'worker_private' || ibm.role == 'worker_public'
      namespaceSelector: all()
  - action: Allow
    destination:
      nets:
      - 0.0.0.0/0
      notNets:
      - 172.16.0.0/12 # This is the reserved subnet. Kubernetes uses internally for mapping services inside the cluster
  order: 1150
  selector: app == 'private-worker-agent'
  types:
  - Egress
