genctl-ci/calico/tekton-worker/tekton-ns-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: tekton-ns
  namespace: tekton-pipelines
spec:
  types:
  - Egress
  - Ingress
